--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -6,8 +6,7 @@ page {
 .output-area {
   height: 30%;
   background-color: #f0f0f0;
-  text-align: right;
-  flex-wrap: wrap;
+  padding-right: 50rpx;
 }
 
 .input-area {
@@ -19,14 +18,19 @@ page {
 .expression {
   font-size: 50rpx;
   color: #5d5d5d;
-  padding-top: 90rpx;
-  margin: 0 50rpx 50rpx 0;
+  flex: 0 0 45%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 
-.result {
+.output {
   font-size: 80rpx;
-  margin-right: 50rpx;
   color: #333;
+  flex: 0 0 55%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .input-area .row {
